--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -5,18 +5,23 @@ on:
       AWSRoleToAssume:
         required: true 
         description: IAM Role to use 
+        type: string
       AWSRegion:
         default: us-east-2 
         description: path to Docker file
+        type: string
       dockerFilePath:
         required: true 
         description: path to Docker file
+        type: string
       ecrHost:
          description: ECR hostname
          required: true
+         type: string
       ecrName:
          required: true
          description: name of ecr
+         type: string
       # nugetToken:
       #    description: Nuget auth Token
       #    required: true
