--- a/.github/workflows/calling-docker-workflows.yaml
+++ b/.github/workflows/calling-docker-workflows.yaml
@@ -5,6 +5,10 @@ on:
     branches: [main]
   workflow_dispatch:
 
+permissions:
+      id-token: write
+      contents: read
+
 jobs:
   BuildandPush:
     uses: ./.github/workflows/docker-push.yaml
