--- a/.github/workflows/calling-docker-workflows.yaml
+++ b/.github/workflows/calling-docker-workflows.yaml
@@ -19,6 +19,7 @@ jobs:
       ecrHost: 916080180725.dkr.ecr.us-east-1.amazonaws.com
       ecrName: diliptest
   PullandPush:
+    needs: BuildandPush
     uses: ./.github/workflows/docker-pull-retag.yaml
     with:
       AWSRoleToAssume: arn:aws:iam::916080180725:root
