--- a/.github/workflows/docker-pull-retag.yaml
+++ b/.github/workflows/docker-pull-retag.yaml
@@ -52,3 +52,5 @@ jobs:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }} 
           docker_username: AWS
           docker_password: ${{inputs.toecrHost}}
+        run: |
+          docker push ${{inputs.toecrHost}}/${{inputs.ecrName}}
