--- a/.github/workflows/inputsTest.yml
+++ b/.github/workflows/inputsTest.yml
@@ -1,1 +1,20 @@
+name: Test Choices
 
+on:
+  workflow_dispatch:
+    inputs:
+      Name:
+        description: our names
+        required: true
+        type: choice
+        options:
+          - "Dilip"
+          - "Sindhu"
+jobs:
+  Running:
+    runs-on: ubuntu-latest
+    steps:
+      - name: List
+        run: ls -R
+      - name: cute couple
+        run: echo ${{inputs.name}}
