--- a/.github/workflows/inputsTest.yml
+++ b/.github/workflows/inputsTest.yml
@@ -8,7 +8,7 @@ on:
         required: true
         type: choice
         options:
-          - "Dilip"
+          - "Dilip": description: 
           - "Sindhu"
 jobs:
   Running:
